# Statisticka_kalkulacka

./: CMakeLists.txt
Statisticka_kalkulacka/: CMakeLists.txt  Statisticka_kalkulacka.cpp  Statisticka_kalkulacka.h  Vystup.txt
